--- a/front/public/css/index.css
+++ b/front/public/css/index.css
@@ -8,3 +8,12 @@ body {
   min-width: 300px;
   height: 100%;
 }
+
+.error-input {
+  border-color: #dc3545;
+}
+
+.error-description {
+  font-size: 0.3rem;
+  color: #dc3545;
+}
